<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_label_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/category"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_category"
        tools:text="Category"/>

    <TextView
        android:id="@+id/tv_label_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:textColor="@color/primary"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_category"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_date"
        tools:text="Date"/>


    <TextView
        android:id="@+id/tv_label_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:textColor="@color/primary"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        android:text="@string/context"/>

    <TextView
        android:id="@+id/tv_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_context"
        tools:text="Context"/>

    <TextView
        android:id="@+id/tv_label_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:textColor="@color/primary"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_context"
        android:text="@string/latitude"/>

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_latitude"
        tools:text="Latitude"/>

    <TextView
        android:id="@+id/tv_label_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:textColor="@color/primary"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_latitude"
        android:text="@string/longitude"/>

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_longitude"
        tools:text="Longitude"/>

</androidx.constraintlayout.widget.ConstraintLayout>